@@ -45,6 +45,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16088: BaseHTTPRequestHandler's send_error method includes a
+  Content-Length header in it's response now. Patch by Antoine Pitrou.
+
 - Issue #16114: The subprocess module no longer provides a misleading error
   message stating that args[0] did not exist when either the cwd or executable
   keyword arguments specified a path that did not exist.
